--- a/게임개발.md
+++ b/게임개발.md
@@ -45,7 +45,7 @@
   2. 게임 기본 구성
         + 총 수행 인원
             - 8명
-            - 시민 팀, 마피아 팀으로 분배
+            - 시민 팀과 마피아 팀으로 분배
             - 각 직업은 랜덤하게 설정
         + 시민 팀
             1. 시민
