--- a/게임개발.md
+++ b/게임개발.md
@@ -1,1 +1,66 @@
 
+### 창의공학설계 8(Infinity) 조 게임개발 논의 assignment.
+
+## 류병욱(조장), 김민헤, 김정현, 이정민, 전소정
+---
++ **논의**
+    1. 논의
+        -   논의1
+            1. 1
+            2. 2
+            3. 3
+        -   논의2
+        -   논의3
+    2. 추가
+    3. 추가2
+    4. 추가3
+
+
+---
++ * ** 벤치 마킹 ** *
+ * 1. mt 마피아
+   * 벤치마킹 한 부분
+     * 기존의 게임 방식
+   * mt 마피아의 단점
+     * 공간적 제약
+       * 같은 공간 내에서만 플레이 > 정치나 전략같은 부분들의 활용이 어렵다.
+     * 기능의 제약
+       * 다양하지 않은 직업, 마피아끼리 대화 어려움
+     * 개인 성격에 영향
+       * 거짓말을 못하는 사람, 말을 하지 않아 첫날부터 죽는 일도 빈번
+     * 로컬룰
+       * 지역에 따라 룰이 달라 혼란
+ * 2. 스타크래프트 마피아
+   * 벤치마킹한 부분 
+     * 추리를 통해 마피아를 잡는 방식
+     * 익명성 보장
+   * 스타크래프트 마피아에서 추가한 점
+      * npc 등장
+         * npc 는 시민에게 마피아가 누군지에 대한 힌트 제공, 대신 마피아가 npc 를 살해할 가능성을 남김 >  흥미 요소
+      * 채팅
+         * 기존 채팅에서의 제한을 없애기 위해 음성 기능 도입 > 방 안에 있는 유저들 음성을 통해 대화 가능, 음성을 통한 귓속말 기능
+      * 2D 그래픽
+         * 기존 스타크래프트의 인터페이스는 모바일로의 접근성이 떨어짐 > 2D 그래픽으로 구현함으로 접근성을 높임
+    
+
+---
++ **게임구성**
+  1. 인 게임
+  2. 게임 인터페이스
+  3. 시나리오
+
+
+---
++ **관리**
+  1. 욕설 제재
+  2. 서버 관리
+
+
+---
++ **수익창출**
+  1. 광고
+  2. 아이템
+  3. 캐릭터
+
+
+---
