--- a/게임개발.md
+++ b/게임개발.md
@@ -3,16 +3,18 @@
 ## 류병욱(조장), 김민헤, 김정현, 이정민, 전소정
 ---
 + **논의**
-    1. 논의
-        -   논의1
-            1. 1
-            2. 2
-            3. 3
-        -   논의2
-        -   논의3
-    2. 추가
-    3. 추가2
-    4. 추가3
+    1. 논의 아이디어
+        - 재미를 위해 혼자하거나 컴퓨터와 하는 게임보다는 유저끼리 플레이할 수 있는 게임
+        - 쉽게 질리지 않고 오래 즐길 수 있는 게임
+        - 수익성이 있는 게임
+        - 머리를 쓰는 추리 게임
+
+    2. 논의 과정
+        - 추리 보드 게임을 모바일 게임으로 출시하자.
+        - 기존 보드 게임과는 차별성을 두자.
+
+    3. 논의 결과
+        - 마피아 게임에 새로운 기능을 추가한 The MAFIA
 
 
 ---
@@ -39,17 +41,8 @@
 
 ---
 + **관리**
-  1. 목적
-      - 현재 유저 유지
-  2. 방식
-      - 유저와의 소통을 통한 적극적 버그 및 서버 관리
-      - 기존 마피아 게임과 다른 차별성 유지 : 이벤트, 기능 추가
-      - 게임의 재미를 위한 마피아 팀과 시민 팀의 밸런스 유지
-      - 유저 제재 제재활성화
-          + 유저들이 욕을 할 경우,    
-           '테일즈런너' 게임에서 사용하는 방식을 빌려             
-           '욕을 하지 않고 즐겁게 게임하는 유저가 되겠습니다.'와 같은 문장을 여러번 입력.
-          + 다른 유저들의 신고가 누적될 경우, 게임 플레이 제한
+  1. 욕설 제재
+  2. 서버 관리
 
 
 ---
