--- a/게임개발.md
+++ b/게임개발.md
@@ -62,14 +62,14 @@
         + 캐시
             - 게임 진행을 하지 않더라도 현금결제를 통한 캐시 사용으로 아이템 구매
             - 캐시 전용 게임 머니 존재 (ex : 애니팡 토파즈) 
-    3. 캐릭터
-      * 유료 캐릭터
-         - 인게임에서 쓰이는 캐릭터를 판매
-         - 일반 무료 캐릭터보다 상향된 능력 소유
-      * 스킨
-          - 캐릭터마다 각자 고유한 코스튬 판매
-          - 간단한 스킨부터 화려한 스킨까지 다양화
-            + 스킨이 화려해질수록 고가의 가격 책정
-          - 크리스마스나 할로윈등 기간 한정 스킨 판매
+  3. 캐릭터
+    * 유료 캐릭터
+       - 인게임에서 쓰이는 캐릭터를 판매
+       - 일반 무료 캐릭터보다 상향된 능력 소유
+    * 스킨
+       - 캐릭터마다 각자 고유한 코스튬 판매
+       - 간단한 스킨부터 화려한 스킨까지 다양화
+       - 스킨이 화려해질수록 고가의 가격 책정
+       - 크리스마스나 할로윈등 기간 한정 스킨 판매
 
 ---
