--- a/게임개발.md
+++ b/게임개발.md
@@ -5,37 +5,60 @@
 ---
 + **논의**
     1. 논의 아이디어
-        - 재미를 위해 혼자하거나 컴퓨터와 하는 게임보다는 유저끼리 플레이할 수 있는 게임
-        - 쉽게 질리지 않고 오래 즐길 수 있는 게임
-        - 수익성이 있는 게임
-        - 머리를 쓰는 추리 게임
+        - 어떤 게임을 만들 것인가?
+            1. 유저끼리 플레이할 수 있는 게임
+            2. 질리지 않고 오래 즐길 수 있는 게임
+            3. 방치형 게임을 벗어난 두뇌 게임
+            4. 이윤이 창출되는 게임
+        - 어떤 장르의 게임을 개발할 것인가?
+            1. 하스스톤과 같은 퍼즐 게임
+                -   다소 흔한 주제이므로 기각
+            2. 두뇌를 사용한 추리 게임
+                -   시나리오, 장치 구성에 따라 흥미 유발 가능
+            3. 방치형게임의 리뉴얼
+                -   다소 모호성이 있어 불가능
 
     2. 논의 과정
-        - 추리 보드 게임을 모바일 게임으로 출시하자.
-        - 기존 보드 게임과는 차별성을 두자.
-
+        - 장르
+            1. 추리 게임, 퍼즐 게임 모두 보드 게임 형태
+                - 둘 다 두뇌 게임이지만 추리 게임이 더 요소가 많음.
+                - 추리 게임을 보드형태로 모바일 게임으로 출시
+        - 기타
+            1. 기존 보드 게임과 차별성을 두자
+                -   음성, 여러 배타적인 기능 추가 등
+                -   기존에 있는 게임 참고 필수
+                -   창의성은 새로운 것이 아닌 기존과 다른 것을 도입하는 것.
     3. 논의 결과
+        - 추리형 보드 게임의 계획
+        - 여러 벤치 마킹 게임 참고
+            1. 스타크래프트 마피아
+            2. 현실 속 마피아 게임
+            3. 기타 기능을 참고할 게임(장르 무관)
         - 마피아 게임에 새로운 기능을 추가한 The MAFIA
 
 
 ---
 + **벤치 마킹**
     1. mt 마피아
-        -   벤치마킹 한 부분
+        -   벤치마킹
             1. 기존의 게임 방식
+            2. 낮과 밤의 반복, 추리형 범인 찾기
         -   mt 마피아의 단점
             1. 공간적 제약
                 - 같은 공간 내에서만 플레이 > 정치, 전략 등 부분의 활용이 어려움
             2. 기능의 제약
-                - 다양하지 않은 직업, 마피아끼리 대화 어려움
+                - 다양하지 않은 직업, 마피아끼리 상호 소통이 어려움
             3. 개인 성격에 영향
                 - 거짓말을 못하는 사람, 말을 하지 않아 첫날부터 죽는 일 등 빈번
             4. 로컬 룰
                 - 지역에 따라 룰이 달라 혼란 야기
     2. 스타크래프트 마피아
-        -   벤치마킹한 부분
-            1. 추리를 통해 마피아를 잡는 방식
+        -   벤치마킹
+            1. 추리를 통한 마피아 검거
+                - 어떤 장치를 통해 추리를 활성화할 것인가에 대한 논의
             2. 익명성 보장
+                - 네트워크상의 닉네임으로 자신을 표출
+                - 개인성격을 
         -   스타크래프트 마피아에서 추가한 점
             1. NPC 등장
                 - NPC는 시민에게 마피아가 누군지에 대한 힌트 제공
@@ -61,6 +84,7 @@
         + 낮과 밤의 반복
             1. 한 팀의 승리조건이 충족될 때 까지?
             2. 한 팀이 다 남을 때까지
+            
   2. 게임 기본 구성
         + 총 수행 인원
             - 8명
@@ -203,6 +227,10 @@
                 - 아이템 사용
                 - 음량 및 감도 조절
                 - 배경음악 음소거
+          + 게임 모드
+            1. 솔로 플레이
+            2. 멀티 플레이
+            3. 유저의 도구 활용을 통한 커스텀 게임 모드 제작 
                             
   3. 인 게임 오브젝트
         + 캐릭터
