--- a/게임개발.md
+++ b/게임개발.md
@@ -6,35 +6,35 @@
 + **논의**
     1. 논의 아이디어
         - 어떤 게임을 만들 것인가?
-           1. 유저끼리 플레이할 수 있는 게임
-           2. 질리지 않고 오래 즐길 수 있는 게임
-           3. 방치형 게임을 벗어난 두뇌 게임
-           4. 이윤이 창출되는 게임
+            1. 유저끼리 플레이할 수 있는 게임
+            2. 질리지 않고 오래 즐길 수 있는 게임
+            3. 방치형 게임을 벗어난 두뇌 게임
+            4. 이윤이 창출되는 게임
         - 어떤 장르의 게임을 개발할 것인가?
-           1. 하스스톤과 같은 퍼즐 게임
-               -   다소 흔한 주제이므로 기각
-           2. 두뇌를 사용한 추리 게임
-               -   시나리오, 장치 구성에 따라 흥미 유발 가능
-           3. 방치형게임의 리뉴얼
-               -   다소 모호성이 있어 불가능
+            1. 하스스톤과 같은 퍼즐게임
+                -   다소 흔한 주제이므로 기각
+            2. 두뇌를 사용한 추리 게임
+                -   시나리오, 장치 구성에 따라 흥미 유발 가능
+            3. 방치형게임의 리뉴얼
+                -   다소 모호성이 있어 불가능
 
-     2. 논의 과정
-         - 장르
-             1. 추리 게임, 퍼즐 게임 모두 보드 게임 형태
-                 - 둘 다 두뇌 게임이지만 추리 게임이 더 요소가 많음.
-                 - 추리 게임을 보드형태로 모바일 게임으로 출시
-         - 기타
-             1. 기존 보드 게임과 차별성을 두자
-                 -   음성, 여러 배타적인 기능 추가 등
-                 -   기존에 있는 게임 참고 필수
-                 -   창의성은 새로운 것이 아닌 기존과 다른 것을 도입하는 것.
-     3. 논의 결과
-         - 추리형 보드 게임의 계획
-         - 여러 벤치 마킹 게임 참고
-             1. 스타크래프트 마피아
-             2. 현실 속 마피아 게임
-             3. 기타 기능을 참고할 게임(장르 무관)
-         - 마피아 게임에 새로운 기능을 추가한 The MAFIA
+    2. 논의 과정
+        - 장르
+            1. 추리게임, 퍼즐 게임은 모두 보드 게임 형태
+                - 둘 다 두뇌 게임이지만 추리 게임이 더 요소가 많다.
+        - 기타
+            1. 기존 보드 게임과 차별성을 두자
+                - 음성, 여러 배타적인 기능 추가 등
+                - 기존에 있는 게임 참고 필수
+                - 창의성은 새로운 것이 아닌 기존과 다른 것을 도입하는 것
+
+    3. 논의 결과
+        - 추리형 보드 게임의 계획
+        - 여러 벤치 마킹 게임 참고
+            1. 스타크래프트 마피아
+            2. 현실 속 마피아 게임
+            3. 기타 기능을 참고할 게임(장르 무관)
+        - 마피아 게임에 새로운 기능을 추가한 The MAFIA
 
 
 ---
