게임개발.md Reivewed and modifed.
md 문서 최종 리뷰 후 수정 작업 진행했습니다.
브랜치에서 수정 후 merge하려 했으나 수정된 문법 부분이 있어 conflict가 발생, 
부득이하게 master의 문서를 수정했습니다. 양해부탁드립니다.

추후 논의의 방향에 따라 해당 마크다운 문서는 변경될 수 있습니다.

--- a/게임개발.md
+++ b/게임개발.md
@@ -5,40 +5,64 @@
 ---
 + **논의**
     1. 논의 아이디어
-        - 재미를 위해 혼자하거나 컴퓨터와 하는 게임보다는 유저끼리 플레이할 수 있는 게임
-        - 쉽게 질리지 않고 오래 즐길 수 있는 게임
-        - 수익성이 있는 게임
-        - 머리를 쓰는 추리 게임
+        - 어떤 게임을 만들 것인가?
+            1. 유저끼리 플레이할 수 있는 게임
+            2. 질리지 않고 오래 즐길 수 있는 게임
+            3. 방치형 게임을 벗어난 두뇌 게임
+            4. 이윤이 창출되는 게임
+        - 어떤 장르의 게임을 개발할 것인가?
+            1. 하스스톤과 같은 퍼즐게임
+                -   다소 흔한 주제이므로 기각
+            2. 두뇌를 사용한 추리 게임
+                -   시나리오, 장치 구성에 따라 흥미 유발 가능
+            3. 방치형게임의 리뉴얼
+                -   다소 모호성이 있어 불가능
 
     2. 논의 과정
-        - 추리 보드 게임을 모바일 게임으로 출시하자.
-        - 기존 보드 게임과는 차별성을 두자.
+        - 장르
+            1. 추리게임, 퍼즐 게임은 모두 보드 게임 형태
+                - 둘 다 두뇌 게임이지만 추리 게임이 더 요소가 많다.
+        - 기타
+            1. 기존 보드 게임과 차별성을 두자
+                - 음성, 여러 배타적인 기능 추가 등
+                - 기존에 있는 게임 참고 필수
+                - 창의성은 새로운 것이 아닌 기존과 다른 것을 도입하는 것
 
     3. 논의 결과
+        - 추리형 보드 게임의 계획
+        - 여러 벤치 마킹 게임 참고
+            1. 스타크래프트 마피아
+            2. 현실 속 마피아 게임
+            3. 기타 기능을 참고할 게임(장르 무관)
         - 마피아 게임에 새로운 기능을 추가한 The MAFIA
 
 
 ---
 + **벤치 마킹**
     1. mt 마피아
-        -   벤치마킹 한 부분
+        -   벤치마킹
             1. 기존의 게임 방식
+            2. 낮과 밤의 반복, 추리형 범인 찾기
         -   mt 마피아의 단점
             1. 공간적 제약
                 - 같은 공간 내에서만 플레이 > 정치, 전략 등 부분의 활용이 어려움
             2. 기능의 제약
-                - 다양하지 않은 직업, 마피아끼리 대화 어려움
+                - 다양하지 않은 직업, 마피아끼리 상호 소통이 어려움
             3. 개인 성격에 영향
                 - 거짓말을 못하는 사람, 말을 하지 않아 첫날부터 죽는 일 등 빈번
             4. 로컬 룰
                 - 지역에 따라 룰이 달라 혼란 야기
     2. 스타크래프트 마피아
-        -   벤치마킹한 부분
-            1. 추리를 통해 마피아를 잡는 방식
+        -   벤치마킹
+            1. 추리를 통한 마피아 검거
+                - 어떤 장치를 통해 추리를 활성화할 것인가에 대한 논의
             2. 익명성 보장
+                - 네트워크상의 닉네임으로 자신을 표출
+                - 개인성격을 
         -   스타크래프트 마피아에서 추가한 점
             1. NPC 등장
-                - NPC는 시민에게 마피아가 누군지에 대한 힌트 제공, 대신 마피아가 npc를 살해할 가능성이 있음
+                - NPC는 시민에게 마피아가 누군지에 대한 힌트 제공
+                - 대신 마피아가 npc를 살해할 가능성이 있음
                 - 흥미 요소로 작용
             2. 채팅
                 - 기존 키보드입력을 통한 제한적 채팅을 위한 음성 기능 도입
@@ -52,13 +76,15 @@
   1. 시나리오
         + 낮
             1. 시민 및 마피아의 토론 및 미션 수행
-            2. 토론 결과를 통해 사형 집행
+            2. 토론 결과를 통한 사형 집행
         + 밤
             1. 시민들은 잠에 빠짐
             2. 마피아는 전략 토론 및 npc 또는 유저 살해
+            3. 캐릭터 또는 직업의 조건에 따른 특수 활동 가능
         + 낮과 밤의 반복
             1. 한 팀의 승리조건이 충족될 때 까지?
             2. 한 팀이 다 남을 때까지
+            
   2. 게임 기본 구성
         + 총 수행 인원
             - 8명
@@ -76,7 +102,7 @@
             4. 의사
                 - 인원 지목 시 해당 인원 소생
                 - 소생되는 대상은 마피아의 타겟이어야함
-                - 지목되는 대상은 
+                - 본인은 지목할 수 없음
         + 마피아 팀
             1. 마피아
                 - 유저 및 조건부 npc 살해 가능
@@ -100,14 +126,14 @@
             3. 생성위치는 게임에 따라 랜덤
         + 미션
             1. 시민
-                - npc가 부여
+                - NPC로부터 부여됨
                 - 형태
                     1. 게임 내 장치(NPC, 아이템 등)를 통한 수행
                     2. 실패 시 해당 힌트 습득 영구불가능
                 - 달성 시 선택
-                    1. 마피아 힌트 부여
+                    1. 마피아 추리 힌트 부여
             2. 마피아
-                - 시스템이 자동 부여
+                - 시스템으로부터 부여
                 - 형태
                     1. 특정 대상에 대한 행동
                     2. 특정 아이템 사용
@@ -147,7 +173,7 @@
                 - 특정 수치 도달 시
                     1. 게임 재화 제공
                     2. 특수 스킨 또는 캐릭터 제공
-                        - 밸런스와 
+                        - 밸런스와 무관한 외관에 치중
         + 음성 채팅
             1. 입력
                 - 핸드폰 마이크
@@ -169,6 +195,7 @@
             1. 게임 머니
                 - 획득 경로
                     1. 게임 승리 또는 패배 시 획득 가능
+                    2. 승리시 패배보다 더 많은 재화를 가질 수 있도록 차등 적용
                 - 사용처
                     1. 아이템 구매
                     2. 캐릭터 구매
@@ -178,6 +205,7 @@
                     1. 현금 결제
                     2. 광고 시청
                     3. 퀘스트 수행
+                    4. 업적 달성
                 - 사용처
                     1. 아이템 구매
                     2. 캐릭터 구매
@@ -199,25 +227,32 @@
                 - 아이템 사용
                 - 음량 및 감도 조절
                 - 배경음악 음소거
+          + 게임 모드
+            1. 솔로 플레이
+            2. 멀티 플레이
+            3. 유저의 도구 활용을 통한 커스텀 게임 모드 제작 
                             
   3. 인 게임 오브젝트
         + 캐릭터
             1. A
                 - 능력
                     1. 이동속도 증가
-                        - 전략적 활용 요인 제공
+                        - 전략적 활용 요인 제공(Ex. 밤에 활동할 수 있는 능력)
             2. B
                 - 능력
                     1. 자물쇠
                         - 자기방어
+                        - 밤이 오기 전 발동해야함
             3. C
                 - 능력
                     1. 도둑
                         - 랜덤한 타 유저의 아이템 강탈
+                        - 직업, 시민 || 마피아 여부 상관 없음
             4. D
                 - 능력
                     1. 안개
                         - 타 유저의 맵을 블라인드
+                        - 활용에 따라 밤에 안개를 펼쳐 유저의 방을 모르게 할 수 있음.
             5. 기타
                 - 캐릭터는 추가 가능
                 - 모든 능력은 1회성
@@ -250,10 +285,15 @@
 + **관리**
   1. 목적
       - 현재 유저 유지
+      - 신 유저 배치
   2. 방식
       - 유저와의 소통을 통한 적극적 버그 및 서버 관리
+        1. 카페 운영
       - 기존 마피아 게임과 다른 차별성 유지 : 이벤트, 기능 추가
+        1. 게릴라성 푸시 이벤트
+        2. n주간 발생하는 장기 이벤트
       - 게임의 재미를 위한 마피아 팀과 시민 팀의 밸런스 유지
+        1. 밸런스 전담 부서 배정
       - 유저 제재 제재활성화
           + 유저들이 욕을 할 경우,    
            '테일즈런너' 게임에서 사용하는 방식을 빌려             
