--- a/역기획서.md
+++ b/역기획서.md
@@ -4,7 +4,7 @@
 ---
 
 1. 팝업 화면
-![popup](./benchmarking_capture/2. commom/확성기.jpg)
+![popup](Infinity/benchmarking_capture/2. commom/확성기.jpg)
 ---
 2. 공통
   - 확성기
