--- a/역기획서.md
+++ b/역기획서.md
@@ -4,8 +4,9 @@
 ---
 
 1. 팝업 화면
-
+<div>
 <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/2.%20commom/%ED%99%95%EC%84%B1%EA%B8%B0.jpg" width="150" height="150">
+</div>
 ---
 2. 공통
   - 확성기
