--- a/역기획서.md
+++ b/역기획서.md
@@ -4,7 +4,7 @@
 ---
 
 1. 팝업 화면
-![pop](/benchmarking_capture/2.%20commom/%ED%99%95%EC%84%B1%EA%B8%B0.jpg){: width="100" height="100"}
+![pop](/benchmarking_capture/2.%20commom/%ED%99%95%EC%84%B1%EA%B8%B0.jpg){: width="100%" height="100%"}
 
 
 ---
