--- a/역기획서.md
+++ b/역기획서.md
@@ -4,7 +4,7 @@
 ---
 
 1. 팝업 화면
-![pop](https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/1.%20pop%20up/%EC%84%9C%EB%B2%84%20%EC%97%B0%EA%B2%B0%20%ED%95%B4%EC%A0%9C.jpg)
+![pop](https://github.com/150x150//https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/1.%20pop%20up/%EC%84%9C%EB%B2%84%20%EC%97%B0%EA%B2%B0%20%ED%95%B4%EC%A0%9C.jpg)
 
 
 ---
