--- a/역기획서.md
+++ b/역기획서.md
@@ -4,8 +4,7 @@
 ---
 
 1. 팝업 화면
-![pop](./benchmarking_capture/1.%20pop%20up/%EC%84%9C%EB%B2%84%20%EC%97%B0%EA%B2%B0%20%ED%95%B4%EC%A0%9C.jpg)
-
+<img src="./benchmarking_capture/1.%20pop%20up/%EC%84%9C%EB%B2%84%20%EC%97%B0%EA%B2%B0%20%ED%95%B4%EC%A0%9C.jpg" width="50%")>
 
 ---
 2. 공통
