--- a/역기획서.md
+++ b/역기획서.md
@@ -4,6 +4,7 @@
 ---
 1. 공통
   - 확성기
+  ![default](https://user-images.githubusercontent.com/39096605/47581310-01952300-d98c-11e8-90d4-feb2bb81e068.jpg)
 ---
 2. 로비 화면
   - 정보
