--- a/역기획서.md
+++ b/역기획서.md
@@ -4,7 +4,7 @@
 ---
 1. 공통
   - 확성기
-  ![default](https://user-images.githubusercontent.com/39096605/47581310-01952300-d98c-11e8-90d4-feb2bb81e068.jpg)
+  - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0.jpg?raw=true" width="50%">
 ---
 2. 로비 화면
   - 정보
