--- a/역기획서.md
+++ b/역기획서.md
@@ -4,7 +4,7 @@
 ---
 1. 공통
   - 확성기
-  - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0.jpg?raw=true" width="50%">
+   <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0.jpg?raw=true" width="50%">
 ---
 2. 로비 화면
   - 정보
