--- a/역기획서.md
+++ b/역기획서.md
@@ -4,7 +4,7 @@
 ---
 2. 공통
   - 확성기
-    - 로비 화면이나 게임 화면 모두 확성기 내용이 보임. 
+    - 로비 화면이나 게임 화면 모두 상단에 확성기 내용이 보임. 
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0.jpg?raw=true" width="50%">
 ---
 3. 로비 화면
