--- a/역기획서.md
+++ b/역기획서.md
@@ -20,6 +20,8 @@
     - 기타
   - 커뮤니티
     - 카페
+      - 포켓마피아 커뮤니티 facebook 화면으로 접속
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%8E%98%EC%9D%B4%EC%8A%A4%EB%B6%81%20%EC%A0%91%EC%86%8D.jpg?raw=true" width="50%">
     - 클랜
     - 광장
     - 포켓팜
