--- a/역기획서.md
+++ b/역기획서.md
@@ -1,6 +1,8 @@
 # 창의공학설계 8조(Infinity) 벤치마킹 어플 '포켓마피아' 역기획서
 
 ## 류병욱(조장), 김민혜, 김정현, 이정민, 전소정
+1. 
+
 ---
 2. 공통
   - 확성기
@@ -24,8 +26,9 @@
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%8E%98%EC%9D%B4%EC%8A%A4%EB%B6%81%20%EC%A0%91%EC%86%8D.jpg?raw=true" width="50%">
     - 클랜
     - 자신이 속한 클랜 확인
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C.jpg?raw=true" width="50%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C.jpg?raw=true" width="50%">    
       - 클랜 랭킹 : 랭킹 화면으로 연결
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EB%9E%AD%ED%82%B9.jpg?raw=true" width="50%">
     - 광장
     - 포켓팜
   - 상점
