--- a/역기획서.md
+++ b/역기획서.md
@@ -6,8 +6,9 @@
 ---
 2. 공통
   - 확성기
-    - 로비 화면이나 게임 화면 모두 상단에 확성기 내용이 보임. 
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0.jpg?raw=true" width="50%">
+    - 로비 화면이나 게임 화면 모두 상단에 확성기 내용이 보임.    
+     <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0.jpg?raw=true" width="50%">
+     
     - 확성기 내용 입력, 일반 확성기를 사용할 것인지 색을 적용하는 확성기를 사용할 것인지 선택
     <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/2.%20common/%ED%99%95%EC%84%B1%EA%B8%B0%EC%9E%85%EB%A0%A5.jpg?raw=true" width="50%">
     
@@ -28,8 +29,23 @@
       - 자신이 속한 클랜 확인
        <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C.jpg?raw=true" width="50%">      
     
-        - 클랜 랭킹 : 랭킹 화면으로 연결
-         <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EB%9E%AD%ED%82%B9.jpg?raw=true" width="50%">
+      - 클랜 랭킹 : 랭킹 화면으로 연결.
+       <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EB%9E%AD%ED%82%B9.jpg?raw=true" width="50%">
+       
+      - 초대 : 유저를 클랜으로 초대 
+        <img src="" width="50%">
+        
+      - 설정 : 클랜 탈퇴 가능
+        <img src="" width="50%">
+        
+      - 클랜이 없을 경우
+        - 클랜 찾아보기 : 포켓마피아 커뮤니티 facebook 화면으로 접속
+          <img src="" width="50%">
+        - 클랜 만들기 : 클랜명을 입력하여 클랜 생성
+          <img src="" width="50%">
+      - 클랜이 있을 경우
+        - :
+        - :
     - 광장
     - 포켓팜
   - 상점
