--- a/역기획서.md
+++ b/역기획서.md
@@ -33,16 +33,15 @@
        <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EB%9E%AD%ED%82%B9.jpg?raw=true" width="50%">
        
       - 초대 : 유저를 클랜으로 초대 
-        <img src="" width="50%">
+        <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EC%B4%88%EB%8C%80.jpg?raw=true" width="50%">
         
       - 설정 : 클랜 탈퇴 가능
-        <img src="" width="50%">
+        <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
         
       - 클랜이 없을 경우
         - 클랜 찾아보기 : 포켓마피아 커뮤니티 facebook 화면으로 접속
-          <img src="" width="50%">
         - 클랜 만들기 : 클랜명을 입력하여 클랜 생성
-          <img src="" width="50%">
+          <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EC%83%9D%EC%84%B1.jpg?raw=true" width="50%">
       - 클랜이 있을 경우
         - :
         - :
