--- a/역기획서.md
+++ b/역기획서.md
@@ -45,16 +45,56 @@
       - 클랜이 있을 경우
         - :
         - :
-    - 광장
+    - 광장 
+      - 사람들과 만나 채팅 가능
+      - <img src="" width="50%">
     - 포켓팜
   - 상점
   - 업적
   - 캐릭터
   - 상단 바
-    - 게임머니
-    - 루비
+    - <img src="" width="50%">
+    - 게임머니 : 현재 소지 게임머니 안내
+      - 코인 상점 : 루비로 코인 구입 가능
+      - <img src="" width="50%">
+    - 루비 : 현재 소지 루비 안내
+      - 루비 상점 : 현금으로 루비 구입 가능
+      - <img src="" width="50%">
     - 친구
+      - 따라가기 허용 버튼 : 다른 유저가 나를 따라오는 것을 허용할지 버튼
+        - 친구 목록 : 친구를 맺은 유저 아이디, 최근 접속 일자, 쪽지, 따라가기, 친구 삭제
+          - 쪽지 : 내용을 입력하여 쪽지 보내기.
+          - 따라가기 : 친구 유저가 접속시 같은 방에 입장 가능. 비접속시 ~~~~
+        - 신청 목록 : ~~~
+        - 친구 추가 : 닉네임으로 다른 유저 검색, 최근 같이한 플레이어 목록
+        - 우편함 : ~~~
     - 설정
+      - 소리 : BGM, FX, MIC 음량 설정
+      - 진동 : 진동 여부 선택
+      - 서버 : 한국 서버, 한국 서버 2, 일본 서버 선택
+      - 언어 : 영어, 한국어, 일본어 선택
+      - 게임 도움말 : 게임 소개 만화 표시
+      - 직업 도움말 ~~~~
+        - 마피아
+        - 시민
+        - 의사
+        - 경찰
+        - 스파이
+        - 군인
+        - 커플
+        - 영매
+        - 기자
+        - 건달
+        - 정치인
+        - 기생
+        - 늑대인간
+        - 괴도
+        - 테러리스트
+        - 무당
+      - 튜토리얼 : 튜토리얼 실행 ~~~~ 이 튜토리얼은 어케하지
+      - 리플레이 : 최근 플레이한 게임 목록과 각 게임의 채팅 내용을 보여줌.
+      - 문의하기 : 포켓마피아 제작사 supercat으로 메일 보내기
+      - 로그아웃
 ---
 4. 인 게임 화면
   - 조작
