--- a/역기획서.md
+++ b/역기획서.md
@@ -51,9 +51,62 @@
     - 광장 
       - 사람들과 만나 채팅 가능
       - <img src="" width="50%">
+        - 인게임 상단바
+        - 팩토리
+          - 미션으로 보상 획득 가능
+          - <img src="" width="50%">
+        - 이벤트
+          - 추천인 이벤트
+            - <img src="" width="50%">
+          - 출석 체크 이벤트
+          - 쿠폰 입력
+            - <img src="" width="50%">
     - 포켓팜
+      - 내 팜에 입장
+      - <img src="" width="50%">
+        - 방명록 
+          - 내 팜에 방문한 사람들의 방명록 확인
+          - <img src="" width="50%">
+        - 사진모드
+          - 캡처 모드
+          - <img src="" width="50%">
+        - 다른 팜 구경가기
+          - 랜덤 방문, 최고 인기 팜에 구경을 갈 수 있음
+          - <img src="" width="50%">
+        - 꾸미기
+          - <img src="" width="50%">
+        - 방 설정
+          - 내 팜의 방 이름과 암호 설정 가능
+          - <img src="" width="50%">
+        - 강퇴하기
+          - <img src="" width="50%">
+        
   - 상점
+    - <img src="" width="50%">
+    - 무료 루비 획득
+      - <img src="" width="50%">
+      - <img src="" width="50%">
+      - <img src="" width="50%">
+    - 설정
+      - <img src="" width="50%">
+    - 아바타 
+      - <img src="" width="50%">
+    - 펫 
+      - <img src="" width="50%">
+    - 이름표
+      - <img src="" width="50%">
+    - 유틸리티
+      - <img src="" width="50%">
+    - 스페셜
+      - <img src="" width="50%">
+    
   - 업적
+    - 일일 미션
+      - <img src="" width="50%">
+    - 업적
+      - <img src="" width="50%">
+    - 포켓팜
+      - <img src="" width="50%">
   - 캐릭터
   - 상단 바
     - <img src="" width="50%">
