--- a/역기획서.md
+++ b/역기획서.md
@@ -11,6 +11,8 @@
   - 출석체크 화면
     - 당일 출석체크 이후 팝업되지 않음
     - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/1.%20pop%20up/%EC%B6%9C%EC%84%9D%EC%B2%B4%ED%81%AC%20%ED%8C%9D%EC%97%85.png" width="50%" height="30%">
+    - 출석 체크 이후 리워드 팝업
+    - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/1.%20pop%20up/%EC%B6%9C%EC%84%9D%EC%B2%B4%ED%81%AC%20%EB%A6%AC%EC%9B%8C%EB%93%9C%ED%8C%9D%EC%97%85.png" width="50%" height="30%">
     
   - 이벤트 팝업 화면
     - 접속 시간에 대한 이벤트 보상 수령 팝업
