--- a/역기획서.md
+++ b/역기획서.md
@@ -38,7 +38,7 @@
     - 친구
   - 게임
     - 마피아
-    - 기타
+    - 술래 잡기
   - 커뮤니티
     - 카페
     - 클랜
@@ -52,6 +52,23 @@
     - 루비
     - 친구
     - 설정
+  - 기타
+    - 랜덤박스, 빙고판
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/etc_game/%EB%9E%9C%EB%B0%95%20%EB%B9%99%EA%B3%A0%ED%8C%90.png" width="50%" height="30%">
+      - 랜덤박스
+        - 1루비 뽑기, 또는 광고노출 무료뽑기를 통해 게임 내 아이템 또는 재화를 얻을 수 있음
+        - 랜덤박스 선택 팝업
+          - 1루비 뽑기, 무료 뽑기로 나누어짐
+          - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/etc_game/%EB%9E%9C%EB%8D%A4%EB%B0%95%EC%8A%A4%20%EC%84%A0%ED%83%9D%20%ED%8C%9D%EC%97%85.png" width="50%" height="30%">
+        - 랜덤박스 광고 팝업
+          - 무료 뽑기 선택시 30초 광고 노출
+          - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/etc_game/%EB%9E%9C%EB%8D%A4%EB%B0%95%EC%8A%A4%20%EB%AC%B4%EB%A3%8C%20%EA%B4%91%EA%B3%A0%ED%8C%9D%EC%97%85.png" width="50%" height="30%">
+        - 랜덤박스 리워드 팝업
+          - 리워드 결과 노출
+          - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/etc_game/%EB%9E%9C%EB%8D%A4%EB%B0%95%EC%8A%A4%20%ED%8C%9D%EC%97%85.png" width="50%" height="30%">
+      - 빙고판
+        - 게임을 통해 얻은 포인트를 통해 빙고 및 올 빙고시 리워드 보상
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/etc_game/%EB%B9%99%EA%B3%A0%ED%8C%90.png" width="50%" height="30%">
 ---
 4. 인 게임 화면
   - 조작
