--- a/역기획서.md
+++ b/역기획서.md
@@ -2,6 +2,14 @@
 
 ## 류병욱(조장), 김민혜, 김정현, 이정민, 전소정
 ---
+0. 게임 로딩 화면
+  - 어플리케이션 실행시 노출되는 화면
+  - Downloading 33%~100% 까지 노출되고 최종 Loading 텍스트 노출됨
+  - 이후 계정 선택창 노출
+  - 로딩 화면
+    - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/0.%20Loading/0.%20%EB%A1%9C%EB%94%A9%20%ED%99%94%EB%A9%B4.png" width="50%" height="30%">
+  - 계정 선택창
+    - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/0.%20Loading/0.%20%EA%B3%84%EC%A0%95%20%EC%84%A0%ED%83%9D%EC%B0%BD.png" width="50%" height="30%">
 
 1. 팝업 화면
   - 설문 팝업 화면
