--- a/역기획서.md
+++ b/역기획서.md
@@ -6,10 +6,15 @@
   - 어플리케이션 실행시 노출되는 화면
   - Downloading 33%~100% 까지 노출되고 최종 Loading 텍스트 노출됨
   - 이후 계정 선택창 노출
+  - 재시도 버튼을 통해 재시작 가능
   - 로딩 화면
     - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/0.%20Loading/0.%20%EB%A1%9C%EB%94%A9%20%ED%99%94%EB%A9%B4.png" width="50%" height="30%">
   - 계정 선택창
+    - 구글 플레이, 페이스북 계정 연동 버튼
     - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/0.%20Loading/0.%20%EA%B3%84%EC%A0%95%20%EC%84%A0%ED%83%9D%EC%B0%BD.png" width="50%" height="30%">
+  - 재시작
+    - 어플리케이션 재시작 버튼
+    - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/0.%20Loading/0.%20%EC%9E%AC%EC%8B%9C%EB%8F%84%20%EB%B2%84%ED%8A%BC.png" width="50%" height="30%">
 
 1. 팝업 화면
   - 설문 팝업 화면
@@ -55,6 +60,9 @@
   - 상점
   - 업적
   - 캐릭터
+    - 로비 화면 하단에 위치
+    - 설정된 캐릭터의 이미지 및 레벨, 닉네임 노출
+    - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0.png" width="50%" height="30%">
   - 상단 바
     - 게임머니
     - 루비
