로딩 화면, 기타 작업
로딩 화면 잔여 작업 및 기타 부분에 도움말, 튜토리얼 버튼 추가했습니다.

--- a/역기획서.md
+++ b/역기획서.md
@@ -69,6 +69,9 @@
     - 친구
     - 설정
   - 기타
+    - 도움말, 튜토리얼
+      - 상단 바  탭의 도움말, 튜토리얼과 같음
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EB%8F%84%EC%9B%80%EB%A7%90%2C%20%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC_%EB%A1%9C%EB%B9%84.png" width="50%" height="30%">
     - 랜덤박스, 빙고판
       - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/etc_game/%EB%9E%9C%EB%B0%95%20%EB%B9%99%EA%B3%A0%ED%8C%90.png" width="50%" height="30%">
       - 랜덤박스
