--- a/역기획서.md
+++ b/역기획서.md
@@ -68,6 +68,32 @@
     - 루비
     - 친구
     - 설정
+      - 소리 : BGM, FX, MIC 음량 설정
+      - 진동 : 진동 여부 선택
+      - 서버 : 한국 서버, 한국 서버 2, 일본 서버 선택
+      - 언어 : 영어, 한국어, 일본어 선택
+      - 게임 도움말 : 게임 소개 만화 표시
+      - 직업 도움말 ~~~~
+        - 마피아
+        - 시민
+        - 의사
+        - 경찰
+        - 스파이
+        - 군인
+        - 커플
+        - 영매
+        - 기자
+        - 건달
+        - 정치인
+        - 기생
+        - 늑대인간
+        - 괴도
+        - 테러리스트
+        - 무당
+      - 튜토리얼 : 튜토리얼 실행 ~~~~ 이 튜토리얼은 어케하지
+      - 리플레이 : 최근 플레이한 게임 목록과 각 게임의 채팅 내용을 보여줌.
+      - 문의하기 : 포켓마피아 제작사 supercat으로 메일 보내기
+      - 로그아웃
   - 기타
     - 도움말, 튜토리얼
       - 상단 바  탭의 도움말, 튜토리얼과 같음
