--- a/2015920069_주의사항.md
+++ b/2015920069_주의사항.md
@@ -19,10 +19,10 @@
     1. 각각 branch에서 각기 다른 문서를 작업하는 것은 문제가 되지 않습니다.
     2. 같은 문서를 작업할 때 문제가 발생합니다!
     3. 만약 작업한 문서가 2개 이상일 때, 중복되는 행을 수정하면 발생합니다.
-      - Ex) A가 0~200 라인을, B가 201~400 라인을 수정하는 경우?
-        1. 서로 다른 라인을 수정했기 때문에 문제가 발생하지 않습니다.
-      - Ex) A가 0~200 라인을, B가 100~200 라인을 수정하는 경우?
-        1. 100~200 라인이 똑같이 수정되지 않는 한 conflict가 발생합니다.
+        - A가 0부터 200 라인을, B가 201부터 400 라인을 수정하는 경우?
+            1. 서로 다른 라인을 수정했기 때문에 문제가 발생하지 않습니다.
+        - A가 0부터 200 라인을, B가 100부터 200 라인을 수정하는 경우?
+            1. 100~200 라인이 똑같이 수정되지 않는 한 conflict가 발생합니다.
     4. 해결 방법
       1. Tree 방식
         1. 각자 branch에서 각기 다른 파일을 작업합니다.
