--- a/2015920069_주의사항.md
+++ b/2015920069_주의사항.md
@@ -1,20 +1,30 @@
+---
 - 알림 파일입니다.
+  - 설명
+    1. 해당 파일은 '2015920069 김정현' 제가 작성하는 주의 파일로 작업 및 가끔 발생하는 오류에 대한 주의 사항을 열거한 파일입니다.
+    2. 간단한 구문으로 작성했기 때문에 다소 가독성이 떨어질 수 있습니다.
+    3. 꼭 해당 사항을 지켜 상호 간에 원활한 작업이 진행될 수 있도록 합시다!
+    4. 저 또한 깃허브 활용에 대해 다 아는 것이 아니기 때문에 서로 도와가는 프로젝트가 될 수 있도록 합시다.
+--- 
   - merge하는 순서!!
     1. master branch에 있는 상태에서 현재 작업해야할 branch를 생성한다.
     2. 생성된 branch에서 파일을 작업한다.
     3. 작업이 완료되면 pull request를 올린다.
     4. conflict가 발생되지 않는 경우 master branch에서 merge하는 것을 기다린다.
+---
   - 문법
     1. 마크다운 문법은 Bold나 italic 같은 것 신경쓰지 마시고 기호로만 작성하면 됩니다!
     2. " * ", " - " 및 숫자를 통해 작성하시면 됩니다.
     3. 대분류, 중분류, 소분류는 키보드의 탭을 눌러서 하시면됩니다.
     4. 중요한 것은 기본 틀로 작업되어 있는 문법을 변경하지 않도록 합니다! conflict issue의 원인이 될 수 있습니다.
+---
   - 마크다운에 이미지 첨부하기
     1. 깃, html 방법 2가지가 있으나 편의성을 위해 html 방식을 사용하도록 합니다.
     2. html 방식은 다음과 같습니다.
         - img src="이미지 URL" width="너비%" height="높이%"
         - 위의 문장에 url, 너비, 높이를 알맞게 입력하고 < > 로 감싸주시면 됩니다.
         - 이미지는 되도록 branch에 업로드해서 url을 따와야 관리가 편합니다.
+---
   - Merge conflict 발생하는 이유?
     1. 각각 branch에서 각기 다른 문서를 작업하는 것은 문제가 되지 않습니다.
     2. 같은 문서를 작업할 때 문제가 발생합니다!
@@ -36,3 +46,4 @@
             6. ===, <<< 로 표시되는 문장으 모두 지워줍니다.
             7. 우측 상단에 있는 Mark as resolve 버튼을 클릭합니다.
                 - 이것은 master branch를 본인 branch에 병합하는 과정입니다.
+---
