--- a/2015920069_주의사항.md
+++ b/2015920069_주의사항.md
@@ -1,7 +1,7 @@
 ---
 - 알림 파일입니다.
   - 설명
-    1. 해당 파일은 '2015920069 김정현' 제가 작성하는 주의 파일로 작업 및 가끔 발생하는 오류에 대한 주의 사항을 열거한 파일입니다.
+    1. 해당 파일은 '2015920069 김정현' 이 주의 파일로 작업 관련 사항과 발생하는 오류에 대해 열거한 파일입니다.
     2. 간단한 구문으로 작성했기 때문에 다소 가독성이 떨어질 수 있습니다.
     3. 꼭 해당 사항을 지켜 상호 간에 원활한 작업이 진행될 수 있도록 합시다!
     4. 저 또한 깃허브 활용에 대해 다 아는 것이 아니기 때문에 서로 도와가는 프로젝트가 될 수 있도록 합시다.
