--- a/2015920069_주의사항.md
+++ b/2015920069_주의사항.md
@@ -6,29 +6,29 @@
     3. 꼭 해당 사항을 지켜 상호 간에 원활한 작업이 진행될 수 있도록 합시다!
     4. 저 또한 깃허브 활용에 대해 다 아는 것이 아니기 때문에 서로 도와가는 프로젝트가 될 수 있도록 합시다.
 --- 
-  - merge하는 순서!!
-    1. master branch에 있는 상태에서 현재 작업해야할 branch를 생성한다.
-    2. 생성된 branch에서 파일을 작업한다.
-    3. 작업이 완료되면 pull request를 올린다.
-    4. conflict가 발생되지 않는 경우 master branch에서 merge하는 것을 기다린다.
----
   - 문법
     1. 마크다운 문법은 Bold나 italic 같은 것 신경쓰지 마시고 기호로만 작성하면 됩니다!
     2. " * ", " - " 및 숫자를 통해 작성하시면 됩니다.
     3. 대분류, 중분류, 소분류는 키보드의 탭을 눌러서 하시면됩니다.
     4. 중요한 것은 기본 틀로 작업되어 있는 문법을 변경하지 않도록 합니다! conflict issue의 원인이 될 수 있습니다.
 ---
+  - merge하는 순서
+    1. master branch에 있는 상태에서 현재 작업해야할 branch를 생성한다.
+    2. 생성된 branch에서 파일을 작업한다.
+    3. 작업이 완료되면 pull request를 올린다.
+    4. conflict가 발생되지 않는 경우 master branch에서 merge하는 것을 기다린다.
+---
   - 마크다운에 이미지 첨부하기
     1. 깃, html 방법 2가지가 있으나 편의성을 위해 html 방식을 사용하도록 합니다.
     2. html 방식은 다음과 같습니다.
         - img src="이미지 URL" width="너비%" height="높이%"
         - 위의 문장에 url, 너비, 높이를 알맞게 입력하고 < > 로 감싸주시면 됩니다.
-        - 이미지는 되도록 branch에 업로드해서 url을 따와야 관리가 편합니다.
+        - 이미지는 되도록 master에 업로드해서 url을 따와야 관리가 편합니다.
 ---
-  - Merge conflict 발생하는 이유?
+  - Merge conflict가 발생하는 이유?
     1. 각각 branch에서 각기 다른 문서를 작업하는 것은 문제가 되지 않습니다.
     2. 같은 문서를 작업할 때 문제가 발생합니다!
-    3. 만약 작업한 문서가 2개 이상일 때, 중복되는 행을 수정하면 발생합니다.
+    3. 만약 같은 문서에 대해서 서로 중복되는 행을 수정하면 발생합니다.
         - A가 0부터 200 라인을, B가 201부터 400 라인을 수정하는 경우?
             1. 서로 다른 라인을 수정했기 때문에 문제가 발생하지 않습니다.
         - A가 0부터 200 라인을, B가 100부터 200 라인을 수정하는 경우?
@@ -45,5 +45,6 @@
             5. resolve window를 확인하면 어느 부분이 충돌이 일어났는지 노란색 바탕으로 표시됩니다.
             6. ===, <<< 로 표시되는 문장으 모두 지워줍니다.
             7. 우측 상단에 있는 Mark as resolve 버튼을 클릭합니다.
-                - 이것은 master branch를 본인 branch에 병합하는 과정입니다.
+            8. 해당 branch의 commit이 부풀려져 보이지만 각각 누가 commit한 부분인지 상세히 나와있습니다.
+            9. 이 방식은 master branch를 자신의 branch에 병합하는 것이라고 할 수 있습니다.
 ---
