--- a/역기획서.md
+++ b/역기획서.md
@@ -125,10 +125,18 @@
         - 친구 추가 : 닉네임으로 다른 유저 검색, 최근 같이한 플레이어 목록
         - 우편함 : ~~~
     - 설정
-      - 소리 : BGM, FX, MIC 음량 설정
-      - 진동 : 진동 여부 선택
-      - 서버 : 한국 서버, 한국 서버 2, 일본 서버 선택
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
+      - 소리 
+        - BGM, FX, MIC 음량 설정
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%86%8C%EB%A6%AC%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
+      - 진동 
+        - 진동 여부 선택
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%84%EB%8F%99%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
+      - 서버
+        - 한국 서버, 한국 서버 2, 일본 서버 선택
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%84%9C%EB%B2%84%EC%84%A0%ED%83%9D.jpg?raw=true" width="50%">
       - 언어 : 영어, 한국어, 일본어 선택
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%96%B8%EC%96%B4%EC%84%A0%ED%83%9D.jpg?raw=true" width="50%">
       - 게임 도움말 : 게임 소개 만화 표시
       - 직업 도움말 ~~~~
         - 마피아
@@ -151,6 +159,7 @@
       - 리플레이 : 최근 플레이한 게임 목록과 각 게임의 채팅 내용을 보여줌.
       - 문의하기 : 포켓마피아 제작사 supercat으로 메일 보내기
       - 로그아웃
+        - 
 ---
 4. 인 게임 화면
   - 조작
