--- a/역기획서.md
+++ b/역기획서.md
@@ -135,9 +135,12 @@
       - 서버
         - 한국 서버, 한국 서버 2, 일본 서버 선택
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%84%9C%EB%B2%84%EC%84%A0%ED%83%9D.jpg?raw=true" width="50%">
-      - 언어 : 영어, 한국어, 일본어 선택
+      - 언어 
+        - 영어, 한국어, 일본어 선택
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%96%B8%EC%96%B4%EC%84%A0%ED%83%9D.jpg?raw=true" width="50%">
-      - 게임 도움말 : 게임 소개 만화 표시
+      - 게임 도움말 
+        - 게임 소개 만화 표시
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(1).jpg?raw=true" width="50%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(2).jpg?raw=true" width="50%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(3).jpg?raw=true" width="50%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(4).jpg?raw=true" width="50%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(5).jpg?raw=true" width="50%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(6).jpg?raw=true" width="50%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(7).jpg?raw=true" width="50%">
       - 직업 도움말 ~~~~
         - 마피아
         - 시민
