--- a/역기획서.md
+++ b/역기획서.md
@@ -158,11 +158,17 @@
         - 괴도
         - 테러리스트
         - 무당
-      - 튜토리얼 : 튜토리얼 실행 ~~~~ 이 튜토리얼은 어케하지
-      - 리플레이 : 최근 플레이한 게임 목록과 각 게임의 채팅 내용을 보여줌.
-      - 문의하기 : 포켓마피아 제작사 supercat으로 메일 보내기
+      - 튜토리얼 
+        - 튜토리얼 실행
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC.jpg?raw=true" width="50%">
+      - 리플레이 
+        - 최근 플레이한 게임 목록과 각 게임의 채팅 내용을 보여줌.
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%A6%AC%ED%94%8C%EB%A0%88%EC%9D%B4.jpg?raw=true" width="50%">
+      - 문의하기 
+        - 포켓마피아 제작사 supercat으로 메일 보내기
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%AC%B8%EC%9D%98%ED%95%98%EA%B8%B0.jpg?raw=true" width="50%">
       - 로그아웃
-        - 
+        - 로그아웃되어 로딩화면으로 이동
 ---
 4. 인 게임 화면
   - 조작
