--- a/역기획서.md
+++ b/역기획서.md
@@ -141,23 +141,31 @@
       - 게임 도움말 
         - 게임 소개 만화 표시
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(1).jpg?raw=true" width="33%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(2).jpg?raw=true" width="33%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(3).jpg?raw=true" width="33%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(4).jpg?raw=true" width="33%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(5).jpg?raw=true" width="33%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(6).jpg?raw=true" width="33%"><img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84%EB%8F%84%EC%9B%80%EB%A7%90%20(7).jpg?raw=true" width="33%">
-      - 직업 도움말 ~~~~
-        - 마피아
-        - 시민
-        - 의사
-        - 경찰
-        - 스파이
-        - 군인
-        - 커플
-        - 영매
-        - 기자
-        - 건달
-        - 정치인
-        - 기생
-        - 늑대인간
-        - 괴도
-        - 테러리스트
-        - 무당
+      - 직업 도움말
+        - 쉬움
+          - 마피아, 시민, 의사, 경찰, 스파이, 군인
+          - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85%EB%8F%84%EC%9B%80%EB%A7%90-%EC%89%AC%EC%9B%80.jpg?raw=true" width="50%">
+        - 어려움
+          - 마피아, 시민, 의사, 경찰, 스파이, 군인, 커플, 영매, 기자, 건달, 정치인, 기생, 늑대인간, 괴도, 테러리스트, 무당
+          - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85%EB%8F%84%EC%9B%80%EB%A7%90-%EB%AA%A8%EB%93%A0%EC%A7%81%EC%97%85.jpg?raw=true" width="50%"> 
+        - 직업 설명
+          - 마피아
+          - 
+          - 시민
+          - 의사
+          - 경찰
+          - 스파이
+          - 군인
+          - 커플
+          - 영매
+          - 기자
+          - 건달
+          - 정치인
+          - 기생
+          - 늑대인간
+          - 괴도
+          - 테러리스트
+          - 무당
       - 튜토리얼 
         - 튜토리얼 실행
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC.jpg?raw=true" width="50%">
