--- a/역기획서.md
+++ b/역기획서.md
@@ -150,22 +150,37 @@
           - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85%EB%8F%84%EC%9B%80%EB%A7%90-%EB%AA%A8%EB%93%A0%EC%A7%81%EC%97%85.jpg?raw=true" width="50%"> 
         - 직업 설명
           - 마피아
-          - 
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EB%A7%88%ED%94%BC%EC%95%84.jpg?raw=true" width="50%">
           - 시민
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EC%8B%9C%EB%AF%BC.jpg?raw=true" width="50%">
           - 의사
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EC%9D%98%EC%82%AC.jpg?raw=true" width="50%">
           - 경찰
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B2%BD%EC%B0%B0.jpg?raw=true" width="50%">
           - 스파이
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EC%8A%A4%ED%8C%8C%EC%9D%B4.jpg?raw=true" width="50%">
           - 군인
-          - 커플
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B5%B0%EC%9D%B8.jpg?raw=true" width="50%">
+          - 연인
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EC%97%B0%EC%9D%B8.jpg?raw=true" width="50%">
           - 영매
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EC%98%81%EB%A7%A4.jpg?raw=true" width="50%">
           - 기자
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B8%B0%EC%9E%90.jpg?raw=true" width="50%">
           - 건달
+            - <img src="" width="50%">
           - 정치인
+            - <img src="" width="50%">
           - 기생
+            - <img src="" width="50%">
           - 늑대인간
+            - <img src="" width="50%">
           - 괴도
+            - <img src="" width="50%">
           - 테러리스트
+            - <img src="" width="50%">
           - 무당
+            - <img src="" width="50%">
       - 튜토리얼 
         - 튜토리얼 실행
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC.jpg?raw=true" width="50%">
