--- a/역기획서.md
+++ b/역기획서.md
@@ -168,19 +168,19 @@
           - 기자
             - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B8%B0%EC%9E%90.jpg?raw=true" width="50%">
           - 건달
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B1%B4%EB%8B%AC.jpg?raw=true" width="50%">
           - 정치인
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EC%A0%95%EC%B9%98%EC%9D%B8.jpg?raw=true" width="50%">
           - 기생
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B8%B0%EC%83%9D.jpg?raw=true" width="50%">
           - 늑대인간
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EB%8A%91%EB%8C%80%EC%9D%B8%EA%B0%84.jpg?raw=true" width="50%">
           - 괴도
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EA%B4%B4%EB%8F%84.jpg?raw=true" width="50%">
           - 테러리스트
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%ED%85%8C%EB%9F%AC%EB%A6%AC%EC%8A%A4%ED%8A%B8.jpg?raw=true" width="50%">
           - 무당
-            - <img src="" width="50%">
+            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%A7%81%EC%97%85-%EB%AC%B4%EB%8B%B9.jpg?raw=true" width="50%">
       - 튜토리얼 
         - 튜토리얼 실행
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC.jpg?raw=true" width="50%">
