--- a/역기획서.md
+++ b/역기획서.md
@@ -117,12 +117,28 @@
       - 루비 상점 : 현금으로 루비 구입 가능
       - <img src="" width="50%">
     - 친구
-      - 따라가기 허용 버튼 : 다른 유저가 나를 따라오는 것을 허용할지 버튼
-        - 친구 목록 : 친구를 맺은 유저 아이디, 최근 접속 일자, 쪽지, 따라가기, 친구 삭제
-          - 쪽지 : 내용을 입력하여 쪽지 보내기.
-          - 따라가기 : 친구 유저가 접속시 같은 방에 입장 가능. 비접속시 ~~~~
+      - 따라가기 허용 버튼 
+        - 다른 유저가 나와 같은 방에 입장할 수 있도록 허용
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0%ED%97%88%EC%9A%A9.jpg?raw=true" width="50%">
+        - 친구 목록 
+          - 친구를 맺은 유저 아이디, 최근 접속 일자, 쪽지, 따라가기, 친구 삭제
+          - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC.jpg?raw=true" width="50%">
+            - 쪽지 
+              - 내용을 입력하여 쪽지 보내기
+              - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%AA%BD%EC%A7%80.jpg?raw=true" width="50%">
+              - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%AA%BD%EC%A7%80%EB%B3%B4%EB%82%B4%EA%B8%B0.jpg?raw=true" width="50%">
+            - 따라가기 
+              - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0.jpg?raw=true" width="50%">
+              - 친구 유저가 접속 시 같은 방으로 입장
+              - 친구 유저가 비접속 시 
+                - 푸시를 보냄
+                - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0-%EB%B9%84%EC%A0%91%EC%86%8D%ED%91%B8%EC%8B%9C.jpg?raw=true" width="50%">
+                - 푸시를 받은 친구 유저는 알림을 받음
+                - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0-%EB%B9%84%EC%A0%91%EC%86%8D%ED%91%B8%EC%8B%9C%EC%95%8C%EB%A6%BC.jpg?raw=true" width="50%">
+              - ~~~~
         - 신청 목록 : ~~~
         - 친구 추가 : 닉네임으로 다른 유저 검색, 최근 같이한 플레이어 목록
+        <img src="" width="50%">
         - 우편함 : ~~~
     - 설정
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
