--- a/역기획서.md
+++ b/역기획서.md
@@ -43,8 +43,9 @@
         
       - 클랜이 없을 경우
         - 클랜 찾아보기 : 포켓마피아 커뮤니티 facebook 화면으로 접속
-        - 클랜 만들기 : 클랜명을 입력하여 클랜 생성
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EC%83%9D%EC%84%B1.jpg?raw=true" width="50%">
+        - 클랜 만들기 
+          - 클랜명을 입력하여 클랜 생성
+          - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%ED%81%B4%EB%9E%9C%20%EC%83%9D%EC%84%B1.jpg?raw=true" width="50%">
       - 클랜이 있을 경우
         - :
         - :
@@ -109,14 +110,30 @@
       - <img src="" width="50%">
   - 캐릭터
   - 상단 바
-    - <img src="" width="50%">
-    - 게임머니 : 현재 소지 게임머니 안내
-      - 코인 상점 : 루비로 코인 구입 가능
-      - <img src="" width="50%">
-    - 루비 : 현재 소지 루비 안내
-      - 루비 상점 : 현금으로 루비 구입 가능
-      - <img src="" width="50%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94.jpg?raw=true" width="50%">
+    - 게임머니 
+      - 현재 소지 게임머니 안내
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%BD%94%EC%9D%B8.jpg?raw=true" width="50%">
+      - 코인 상점 
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90%EB%B2%84%ED%8A%BC.jpg?raw=true" width="50%">
+        - 루비로 코인 구입 가능
+        - 루비 코인 가격 url 넣어야함~~~~~~~~~~~~~~~~~~~~~~~~~~
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90.jpg?raw=true" width="50%">
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%BD%94%EC%9D%B8%EA%B5%AC%EC%9E%85%ED%99%95%EC%9D%B8.jpg?raw=true" width="50%">
+        
+    - 루비 
+      - 현재 소지 루비 안내
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84.jpg?raw=true" width="50%">
+      - 루비 상점 
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90%EB%B2%84%ED%8A%BC.jpg?raw=true" width="50%">
+        - 현금으로 루비 구입 가능
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg?raw=true" width="50%">
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EA%B5%AC%EC%9E%85%ED%99%95%EC%9D%B8.jpg?raw=true" width="50%">
+        - 루비 선물
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EC%84%A0%EB%AC%BC.jpg?raw=true" width="50%">
+        
     - 친구
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%B9%9C%EA%B5%AC.jpg?raw=true" width="50%">
       - 따라가기 허용 버튼 
         - 다른 유저가 나와 같은 방에 입장할 수 있도록 허용
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0%ED%97%88%EC%9A%A9.jpg?raw=true" width="30%">
@@ -152,6 +169,7 @@
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%9A%B0%ED%8E%B8%ED%95%A8.jpg?raw=true" width="50%">
 
     - 설정
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
       - 소리 
         - BGM, FX, MIC 음량 설정
