--- a/역기획서.md
+++ b/역기획서.md
@@ -127,6 +127,7 @@
       - 루비 상점 
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90%EB%B2%84%ED%8A%BC.jpg?raw=true" width="50%">
         - 현금으로 루비 구입 가능
+        - 루비 현금 가격 url 넣어야함~~~~~~~~~~~~~~~~~~~~~~~~~~
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg?raw=true" width="50%">
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EA%B5%AC%EC%9E%85%ED%99%95%EC%9D%B8.jpg?raw=true" width="50%">
         - 루비 선물
