--- a/역기획서.md
+++ b/역기획서.md
@@ -85,9 +85,11 @@
   - 상점
     - <img src="" width="50%">
     - 무료 루비 획득
-      - <img src="" width="50%">
-      - <img src="" width="50%">
-      - <img src="" width="50%">
+      - 광고에 참여하여 루비 획득 가능
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D1.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D2.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D3.jpg?raw=true" width="50%">
+      
     - 설정
       - <img src="" width="50%">
     - 아바타 
