--- a/역기획서.md
+++ b/역기획서.md
@@ -83,34 +83,59 @@
           - <img src="" width="50%">
         
   - 상점
-    - <img src="" width="50%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%95%84%EB%B0%94%ED%83%80.jpg?raw=true" width="50%">
     - 무료 루비 획득
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D.jpg?raw=true" width="50%">
       - 광고에 참여하여 루비 획득 가능
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D1.jpg?raw=true" width="50%">
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D2.jpg?raw=true" width="50%">
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EB%AC%B4%EB%A3%8C%EB%A3%A8%EB%B9%84%ED%9A%8D%EB%93%9D3.jpg?raw=true" width="50%">
       
     - 설정
-      - <img src="" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%84%A4%EC%A0%95%EC%B0%BD.jpg?raw=true" width="50%">
     - 아바타 
-      - <img src="" width="50%">
+      - 다양한 아바타 구입 가능
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%95%84%EB%B0%94%ED%83%80.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%95%84%EB%B0%94%ED%83%801.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%95%84%EB%B0%94%ED%83%802.jpg?raw=true" width="50%">
+      
     - 펫 
       - <img src="" width="50%">
     - 이름표
       - <img src="" width="50%">
     - 유틸리티
       - <img src="" width="50%">
+      - <img src="" width="50%">
     - 스페셜
       - <img src="" width="50%">
     
   - 업적
+    - 특정 조건 만족 시 보상 지급
     - 일일 미션
-      - <img src="" width="50%">
+      - 매일 초기화되는 일일 미션
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%97%85%EC%A0%81-%EC%9D%BC%EC%9D%BC%EB%AF%B8%EC%85%98.jpg?raw=true" width="50%">
     - 업적
-      - <img src="" width="50%">
+      - 누적 플레이에 대한 업적 미션
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%97%85%EC%A0%81-%EC%97%85%EC%A0%81.jpg?raw=true" width="50%">
     - 포켓팜
-      - <img src="" width="50%">
+      - 포켓팜 업적 미션
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%97%85%EC%A0%81-%ED%8F%AC%EC%BC%93%ED%8C%9C.jpg?raw=true" width="50%">
+      
   - 캐릭터
+    - 캐릭터의 정보 표시
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0.jpg?raw=true" width="50%">
+      - 상세 전적
+        - 쉬움
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EC%89%AC%EC%9B%80.jpg?raw=true" width="50%">
+        - 모든 직업
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EB%AA%A8%EB%93%A0%EC%A7%81%EC%97%85.jpg?raw=true" width="50%">
+        - 랭크 게임
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EB%9E%AD%ED%81%AC.jpg?raw=true" width="50%">
+      - 따라가기 
+      - 포켓팜 방문
+        - 포켓팜으로 연결
+        
   - 상단 바
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94.jpg?raw=true" width="50%">
     - 게임머니 
