--- a/역기획서.md
+++ b/역기획서.md
@@ -107,6 +107,9 @@
     - 유틸리티
       - <img src="" width="50%">
       - <img src="" width="50%">
+      - <img src="" width="50%">
+      - <img src="" width="50%">
+      - <img src="" width="50%">
     - 스페셜
       - <img src="" width="50%">
     
@@ -133,6 +136,10 @@
         - 랭크 게임
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EB%9E%AD%ED%81%AC.jpg?raw=true" width="50%">
       - 따라가기 
+        - 자신일 경우 오류
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%98%A4%EB%A5%98%EB%A9%94%EC%84%B8%EC%A7%80.jpg?raw=true" width="50%">
+      - 자기소개 입력
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%9E%90%EA%B8%B0%EC%86%8C%EA%B0%9C.jpg?raw=true" width="50%">
       - 포켓팜 방문
         - 포켓팜으로 연결
         
