--- a/역기획서.md
+++ b/역기획서.md
@@ -101,17 +101,24 @@
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%95%84%EB%B0%94%ED%83%802.jpg?raw=true" width="50%">
       
     - 펫 
-      - <img src="" width="50%">
+      - 펫 구입
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%ED%8E%AB1.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%ED%8E%AB2.jpg?raw=true" width="50%">
     - 이름표
-      - <img src="" width="50%">
+      - 유저 id에 대한 꾸미기 옵션
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9D%B4%EB%A6%84%ED%91%9C1.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9D%B4%EB%A6%84%ED%91%9C2.jpg?raw=true" width="50%">
     - 유틸리티
-      - <img src="" width="50%">
-      - <img src="" width="50%">
-      - <img src="" width="50%">
-      - <img src="" width="50%">
-      - <img src="" width="50%">
+      - 기능을 가진 아이템 구매
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9C%A0%ED%8B%B8%EB%A6%AC%ED%8B%B01.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9C%A0%ED%8B%B8%EB%A6%AC%ED%8B%B02.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9C%A0%ED%8B%B8%EB%A6%AC%ED%8B%B03.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9C%A0%ED%8B%B8%EB%A6%AC%ED%8B%B04.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%9C%A0%ED%8B%B8%EB%A6%AC%ED%8B%B05.jpg?raw=true" width="50%">
     - 스페셜
-      - <img src="" width="50%">
+      - 현금으로 구매 가능한 패키지
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%8A%A4%ED%8E%98%EC%85%9C1.jpg?raw=true" width="50%">
+      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EC%A0%90-%EC%8A%A4%ED%8E%98%EC%85%9C2.jpg?raw=true" width="50%">
     
   - 업적
     - 특정 조건 만족 시 보상 지급
