--- a/역기획서.md
+++ b/역기획서.md
@@ -212,9 +212,13 @@
 4. 인 게임 화면
   - 조작
     - 콘솔
+      - 이동키
+        - 상하좌우 이동을 할 수 있음
+        <img src=”https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg” width=”50%” height=”30%">
+      - 직업 메모
+      - 
   - 게임 모드
-    - 마피아(쉬움)
-    - 마피아(전체 직업)
+    - 마피아
     - 포켓 마이크(노래방)
     - 채팅
 
