--- a/역기획서.md
+++ b/역기획서.md
@@ -214,7 +214,7 @@
     - 콘솔
       - 이동키
         - 상하좌우 이동을 할 수 있음
-        <img src=”https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg” width=”50%” height=”30%">
+        - <img src=”https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg?raw=true” width=”50%” height=”30%">
       - 직업 메모
       - 
   - 게임 모드
