2018920019 류병욱 창의공학기초설계 역계획서

--- a/역기획서.md
+++ b/역기획서.md
@@ -216,7 +216,9 @@
         - 상하좌우 이동을 할 수 있음
         - <img src=”https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg?raw=true” width=”50%” height=”30%">
       - 직업 메모
-      - 
+        * 
+      - 콘솔 넘기기
+  
   - 게임 모드
     - 마피아
     - 포켓 마이크(노래방)
