--- a/역기획서.md
+++ b/역기획서.md
@@ -215,9 +215,14 @@
       - 이동키
         - 상하좌우 이동을 할 수 있음
         - <img src=”https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg?raw=true” width=”50%” height=”30%">
-      - 직업 메모
-        * 
+            
       - 콘솔 넘기기
+        - 우로 넘기기
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg?raw=true" width"50%" height="30%">
+        - 로 넘기기
+        -
+        
+       
   
   - 게임 모드
     - 마피아
