--- a/역기획서.md
+++ b/역기획서.md
@@ -218,7 +218,7 @@
             
       - 콘솔 넘기기
         - 우로 넘기기
-        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg?raw=true" width"50%" height="30%">
+        - <img src="https://raw.githubusercontent.com/ByungOok/Infinity/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg" width"50%" height="30%">
         - 로 넘기기
         -
         
