--- a/역기획서.md
+++ b/역기획서.md
@@ -316,6 +316,9 @@
       - 리플레이 
         - 최근 플레이한 게임 목록과 각 게임의 채팅 내용을 보여줌.
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%A6%AC%ED%94%8C%EB%A0%88%EC%9D%B4.jpg?raw=true" width="50%">
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%A6%AC%ED%94%8C%EB%A0%88%EC%9D%B4-%EB%82%B4%EC%9A%A92.jpg?raw=true" width="50%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%A6%AC%ED%94%8C%EB%A0%88%EC%9D%B4-%EB%82%B4%EC%9A%A9.jpg?raw=true" width="50%">
+        - 리플레이 내용으로 신고 가능
+        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%A6%AC%ED%94%8C%EB%A0%88%EC%9D%B4-%EC%8B%A0%EA%B3%A0.jpg?raw=true" width="50%">
       - 문의하기 
         - 포켓마피아 제작사 supercat으로 메일 보내기
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EB%AC%B8%EC%9D%98%ED%95%98%EA%B8%B0.jpg?raw=true" width="50%">
